fixed spacing issue in e-commerce page

--- a/src/app/features/e-commerce/product-details/product-details.component.scss
+++ b/src/app/features/e-commerce/product-details/product-details.component.scss
@@ -67,6 +67,11 @@
     margin-top: 1rem !important;
     margin-bottom: 2.5rem !important;
 }
+.lineSeperator {
+    border: 1px solid #d6d6d6;
+    margin-top: 1rem !important;
+    margin-bottom: 1.5rem !important;
+}
 @media screen and (max-width: 767px) {
     .weightVariantBtn {
         border: solid 1px #30855c;
